Avoid ckEditor to overflow on mobile, see #54128

--- a/frontend/src/app/spot/styles/sass/components/form-field.sass
+++ b/frontend/src/app/spot/styles/sass/components/form-field.sass
@@ -45,6 +45,7 @@
 
     > *
       flex-grow: 1
+      overflow: hidden
 
   &--description
     @include spot-caption
